# causal-model

./: (EN)_Causal Graph Disentanglement with Heterogeneous GraphSAGE for Multimodal Misinformation Detection.docx  (EN)_Causal Graph Disentanglement with Heterogeneous GraphSAGE for Multimodal Misinformation Detection_BACKUP_prerevision.docx  (VN)_Causal Graph Disentanglement with Heterogeneous GraphSAGE for Multimodal Misinformation Detection.docx  (VN)_Causal Graph Disentanglement with Heterogeneous GraphSAGE for Multimodal Misinformation Detection_BACKUP_prerevision.docx  (VN)_Causal Graph.docx  .gitignore  CHANGES_SUMMARY.md  CausalHeteroGNN_FAIR_VN_Final.docx  CausalHeteroGNN_FAIR_VN_Final_de_hieu.docx  CausalHeteroGNN_FAIR_VN_Final_trau_chuot.docx  CausalHeteroGNN_FAIR_VN_Final_trau_chuot_sua_hinh4.docx  DE_CUONG_BON_PHAN.md  EVAL_REALISM.md  HUONG_DAN_GIAI_TRINH_HINH2_CLASSIFIER_CODE.md  IMPROVEMENTS.md  Paper_VN_full.md  RESPONSE_TO_COMMITTEE.md  RESULTS_UPDATE.md  REVIEW_FAIR.md  RUNNING_GUIDE.md  SETUP.md  STATS_MASTER.md  VN.md  add_figures_to_docx.py  aggregate_loco.py  build_revised_EN_docx.py  causalheterognn_flow.html  docker-compose.yml  export_docx.py  fix_hinh4_loco.py  generate_figures.py  main.py  make_bi_dashboard_figure.py  make_neo4j_bi_figures.py  paper_EN_extracted.txt  polish_vn_docx.py  pyproject.toml  read_docx.py  reembed_text.py  requirements.txt  (+7 more)
docs/: 00_TONG_QUAN.md  01_DU_LIEU_DAU_VAO.md  02_XAY_DUNG_DO_THI.md  03_HAI_NHANH_DO_THI.md  04_BO_PHAN_LOAI.md  05_VI_DU_MINH_HOA.md  06_DOI_CHIEU_CODE.md  07_HUONG_DAN_CHAY_CODE.md
(+21 files in other folders)
