[project]
name = "fakeddit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dowhy>=0.14",
    "econml>=0.16.0",
    "neo4j>=6.2.0",
    "networkx>=3.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "python-dotenv>=1.0.0",
    "pyvis>=0.3.2",
    "requests>=2.34.2",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "urllib3>=2.0.0",
]
